--- a/front/public/index.html
+++ b/front/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>ultralive_icon.ico">
+    <link rel="icon" href="<%= BASE_URL %>gym-icon.ico">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
-    <title>UltraliveDatabase</title>
+    <title>TrainingPerformance by sluvik</title>
   </head>
   <body>
     <noscript>
