--- a/front/public/index.html
+++ b/front/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>gym-icon.ico">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
-    <title>TrainingPerformance by sluvik</title>
+    <title>WorkoutNotepad by sluvik</title>
   </head>
   <body>
     <noscript>
